# wallhaven-rs

./: Cargo.toml  LICENSE  README.md
src/: client.rs  lib.rs  models.rs
src/client/: error.rs  has_path.rs  mod.rs  shortcuts.rs
src/models/: common.rs  enums.rs  mod.rs  raw_models.rs  request.rs  response.rs  tag.rs  user_collection.rs  user_settings.rs  wallpaper.rs
src/models/enums/: aspect_ratio.rs  color.rs  file_type.rs  resolution.rs  sorting_order.rs  sorting_type.rs  thumbnail_resolution.rs  top_range.rs  user_group.rs
src/models/enums/flaggables/: categories.rs  mod.rs  purities.rs
src/models/request/: collection_items.rs  search.rs
src/models/request/collection_items/: mod.rs
src/models/request/search/: mod.rs  query.rs
src/models/response/: search.rs  tag.rs  user_collection.rs  user_settings.rs  wallpaper.rs
src/models/response/search/: mod.rs  query.rs  tag_query.rs  wallpaper_summary.rs
src/models/response/wallpaper/: avatar.rs  mod.rs  thumbnails.rs  uploader.rs
src/models/search/: mod.rs  request.rs
tests/: client_creation.rs  collections.rs  search.rs  tag.rs  user_settings.rs  wallpaper.rs
tests/common/: mod.rs
