[package]
name = "wallhaven-api"
version = "0.0.1-dev"
edition = "2024"

authors = ["ImTrisha <imtrisha2324@gmail.com>"]
description = "An incomplete api wrapper for wallhaven.cc"
repository = "https://github.com/im-trisha/wallhaven-api-rs"
homepage = "https://github.com/im-trisha/wallhaven-api-rs"
documentation = "https://docs.rs/wallhaven-api"
license = "MIT"
keywords = ["api", "wallhaven", "wrapper", "client"]

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] } 
url = "2.5.4" # Used only in src/client/error.rs to map url::ParseError
futures = "0.3.31" # Used to stream file bytes into file
tokio = "1.44.2" # Asynchronously manipulate files