[package]
name = "wallhaven-rs"
license = "MIT"
version = "0.2.0"
edition = "2024"
authors = ["im-trisha <imtrisha2324@gmail.com>"]
categories = ["api", "wrapper", "wallhaven", "wallpaper", "client"]
keywords = ["api", "wrapper", "wallhaven", "wallpaper", "client"]
description = "An api wrapper for wallhaven.cc"
repository = "https://github.com/im-trisha/wallhaven-rs"
homepage = "https://github.com/im-trisha/wallhaven-rs"
documentation = "https://docs.rs/wallhaven-api"
readme = "README.md"

[dependencies]
# Requests.
reqwest = { version = "0.12.24", features = ["json", "stream"] }

# Serialization/Deserialization
serde = { version = "1.0.228", features = ["derive"] }

# A lot of serde helpers
serde_with = "3.16.0"

bitflags = "2.10.0"       # Used for flaggable enums
thiserror = "2.0.17"      # Create an error type for the whole crate to use
derive_builder = "0.20.2" # Deriving the builders for requests types

url = "2.5.7"                                       # Used for the url type and ParseError
mime = "0.3.17"                                     # Used for the mime::Mime type and is re-exported for ease of use
bytes = "1.11.0"                                    # Used to return a Stream<Item=bytes::Bytes>
futures = "0.3.31"                                  # Used for the Stream type
jiff = { version = "0.2.16", features = ["serde"] } # Used for the DateTime type

# TODO: Remove, only for testing
serde_json = "1.0.145"


[dev-dependencies]
assert2 = "0.3.16"
tokio = { version = "1.48.0", features = ["macros"] }


# Lints down there, you can skip safely! Maybe.
# If some of the lints are nice we can discuss about it in the issues

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -2 }
nursery = { level = "warn", priority = -2 }
cargo = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -1 } # Pedantic takes priority on the others

print_stdout = "deny" # Its a lib and we should never print with println!

wildcard_imports = "allow" # Well, i mean, why not

# I personally like those two
single_match_else = "allow"
match_bool = "allow"
